[package]
name = "soldag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.26"
mongodb = "3.2.2"
serde = "1.0.218"
serde_json = "1.0.140"
solana-client = "2.2.0"
solana-rpc-client-api = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status-client-types = "2.2.1"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.5.4"
